Implement external integration API
